# dl-chem-101

./: README.md  strip_comments.py
01_prop_pred_FFN/: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg
01_prop_pred_FFN/analysis/: collect_hidden_sweep.py  get_top_smiles.py
01_prop_pred_FFN/configs/: 2022_08_07_exp_config_debug.yaml
01_prop_pred_FFN/data/: Enamine10k.csv  caco2_wang.tab
01_prop_pred_FFN/launcher_scripts/: generic_slurm.sh  launch_tensorboard.sh  run_from_config.py
01_prop_pred_FFN/results/2022_08_07_hidden_size_sweep/: experiment.yaml  timestamps.txt
01_prop_pred_FFN/results/example_run/: args.yaml  preds.tsv  test_results.yaml
01_prop_pred_FFN/results/example_run/version_0/: events.out.tfevents.1659891661.molgpu01.870727.0  (+1 more)
01_prop_pred_FFN/run_scripts/: make_preds.py  train_ffn.py
01_prop_pred_FFN/src/pred_ffn/: ffn_data.py  ffn_model.py  fingerprint.py  predict.py  train.py  utils.py
02_prop_pred_GNN/: .README.md.swp  README.md  environment.yml  requirements.txt  setup.cfg
02_prop_pred_GNN/analysis/: .collect_hidden_sweep.py.swp  collect_hidden_sweep.py
02_prop_pred_GNN/configs/: 2022_08_07_exp_config_debug.yaml
02_prop_pred_GNN/results/example_run/: args.yaml  preds.tsv  test_results.yaml
02_prop_pred_GNN/run_scripts/: make_preds.py  train_gnn.py
02_prop_pred_GNN/src/pred_gnn/: .gnn_data.py.swp  .gnn_module.py.swp  .predict.py.swp  gnn_data.py  gnn_model.py  gnn_module.py  predict.py  train.py  utils.py
02_prop_pred_GNN/src/pred_gnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+50 files in other folders)
