[metadata]
name = pred_ffn
version = <version number: 0.0.1
license = MIT
description = Property prediction
long_description = file: README.md
author = Sam Goldman
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =
#   numpy
#   pandas
#   joblib

[options.extras_require]
dev =
    jupyterlab

[options.packages.find]
where=src
